--- a/style.css
+++ b/style.css
@@ -81,3 +81,6 @@
         cursor: pointer;
         border-radius: 50px;
 }
+body{
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0, 0, 0, 0.3)), url("white.jpg");
+}
